--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import "@fontsource/inter";
+@import "@fontsource/inter/100.css";
+@import "@fontsource/inter/300.css";
+@import "@fontsource/inter/400.css";
+@import "@fontsource/inter/700.css";
+@import "@fontsource/inter/900.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -71,6 +78,7 @@
     @apply border-border;
   }
   body {
+    font-family: "Inter";
     @apply bg-background text-foreground;
   }
 }
